--- a/d2.config
+++ b/d2.config
@@ -1,16 +1,16 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_d-team_newifi-d2=y
+CONFIG_NODEJS_ICU_NONE=y
 CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
-CONFIG_PACKAGE_UnblockNeteaseMusicGo=y
+CONFIG_PACKAGE_UnblockNeteaseMusic=y
 CONFIG_PACKAGE_automount=y
-CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_boost=y
 CONFIG_PACKAGE_boost-date_time=y
 CONFIG_PACKAGE_boost-program_options=y
 CONFIG_PACKAGE_boost-system=y
-CONFIG_PACKAGE_btrfs-progs=y
-CONFIG_PACKAGE_e2fsprogs=y
+# CONFIG_PACKAGE_etherwake is not set
+CONFIG_PACKAGE_frpc=y
 CONFIG_PACKAGE_ipt2socks=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
@@ -51,28 +51,23 @@ CONFIG_PACKAGE_kmod-sched-connmark=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-scsi-core=y
 CONFIG_PACKAGE_kmod-tun=y
+CONFIG_PACKAGE_kmod-usb-printer=y
 CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb-storage-extras=y
-CONFIG_PACKAGE_libattr=y
-CONFIG_PACKAGE_libblkid=y
-CONFIG_PACKAGE_libcomerr=y
+CONFIG_PACKAGE_libatomic=y
+CONFIG_PACKAGE_libcares=y
 CONFIG_PACKAGE_libevent2=y
-CONFIG_PACKAGE_libext2fs=y
 CONFIG_PACKAGE_libgmp=y
+CONFIG_PACKAGE_libhttp-parser=y
 CONFIG_PACKAGE_libiconv-full=y
-CONFIG_PACKAGE_liblzo=y
 CONFIG_PACKAGE_libminiupnpc=y
-CONFIG_PACKAGE_libmount=y
 CONFIG_PACKAGE_libnatpmp=y
 CONFIG_PACKAGE_libncurses=y
+CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_libreadline=y
-CONFIG_PACKAGE_libsmartcols=y
-CONFIG_PACKAGE_libss=y
 CONFIG_PACKAGE_libstdcpp=y
-CONFIG_PACKAGE_lsblk=y
-CONFIG_PACKAGE_luci-app-diskman=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
-CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
+CONFIG_PACKAGE_libuv=y
+CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-ipsec-vpnd=y
 CONFIG_PACKAGE_luci-app-qos=y
 CONFIG_PACKAGE_luci-app-samba=y
@@ -83,19 +78,22 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
+CONFIG_PACKAGE_luci-app-usb-printer=y
+# CONFIG_PACKAGE_luci-app-wol is not set
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-i18n-ipsec-vpnd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-qos-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-samba-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-softethervpn-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
+CONFIG_PACKAGE_node=y
 CONFIG_PACKAGE_ntfs-3g=y
-CONFIG_PACKAGE_parted=y
+CONFIG_PACKAGE_p910nd=y
 CONFIG_PACKAGE_qos-scripts=y
 CONFIG_PACKAGE_redsocks2=y
 CONFIG_PACKAGE_samba36-server=y
 CONFIG_PACKAGE_shadowsocksr-libev-server=y
-CONFIG_PACKAGE_smartmontools=y
 CONFIG_PACKAGE_softethervpn5-bridge=y
 CONFIG_PACKAGE_softethervpn5-client=y
 CONFIG_PACKAGE_softethervpn5-libs=y
@@ -121,13 +119,12 @@ CONFIG_PACKAGE_strongswan-mod-xcbc=y
 CONFIG_PACKAGE_tc=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_trojan=y
-CONFIG_PACKAGE_uclibcxx=y
 CONFIG_PACKAGE_v2ray=y
 CONFIG_PACKAGE_v2ray-plugin=y
 CONFIG_PACKAGE_zerotier=y
 CONFIG_STRONGSWAN_ROUTING_TABLE="220"
 CONFIG_STRONGSWAN_ROUTING_TABLE_PRIO="220"
-CONFIG_UnblockNeteaseMusic_Go=y
+CONFIG_UnblockNeteaseMusic_NodeJS=y
 CONFIG_V2RAY_COMPRESS_UPX=y
 CONFIG_V2RAY_DISABLE_NONE=y
 CONFIG_V2RAY_EXCLUDE_ASSETS=y
